--- a/zed_wrapper/CMakeLists.txt
+++ b/zed_wrapper/CMakeLists.txt
@@ -27,7 +27,7 @@ if ( CMAKE_SYSTEM_NAME2 MATCHES "aarch64" ) # Jetson TX
     SET(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
 endif()
 
-set(CUDA_DIR "/usr/local/cuda-10.0")
+set(CUDA_TOOLKIT_ROOT_DIR "/usr/local/cuda-10.0")
 
 find_package(CUDA 10.0 EXACT)
 checkPackage("CUDA" "CUDA not found, install it from:\n https://developer.nvidia.com/cuda-downloads")
